inline some of Loading component styles to avoid icon flicker

--- a/src/styles/components/base/_loading.scss
+++ b/src/styles/components/base/_loading.scss
@@ -1,19 +1,3 @@
-.loading {
-  align-items: center;
-  display: flex;
-  flex: 1 0 auto;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.loading__icon {
-  -webkit-animation: spin 2s linear infinite; /* Safari */
-          animation: spin 2s linear infinite;
-  color: $off-white;
-  height: $l-size;
-  width: $l-size;
-}
-
 /* Safari */
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotate(0deg); }
